--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Winterbells - A tribute to Adobe Flash + Ferry Halim</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="/js/snow.js" defer></script>
-    <script src="/js/player.js" defer></script>
-    <script src="/js/bell.js" defer></script>
+    <!-- <script src="/js/snow.js" defer></script> -->
+    <!-- <script src="/js/player.js" defer></script> -->
+    <!-- <script src="/js/bell.js" defer></script> -->
     <script src="/js/main.js" defer></script>
   </head>
   <body>
