moved main.js out of js folder

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- <script src="/js/snow.js" defer></script> -->
     <!-- <script src="/js/player.js" defer></script> -->
     <!-- <script src="/js/bell.js" defer></script> -->
-    <script src="/js/main.js" defer></script>
+    <script src="main.js" defer></script>
   </head>
   <body>
     <h1>Winterbells</h1>
